fix: gift commands